--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -41,7 +41,7 @@
   <% end -%>
 <% end %>
 
-<h3 style="vertical-align: middle;"><%= image_tag("/icons/monitoring.png", :height=>"21", :width=>"21", :border=>"0", :style=>'vertical-align: bottom;') %> <%= _("Status") %></h3>
+<h3 style="vertical-align: middle;"><%= image_tag("/icons/monitoring.png", :height=>"21", :width=>"21", :border=>"0", :style=>'vertical-align: middle;') %> <%= _("Status") %></h3>
 
   <div id="status-panel" class="plugin-content" style="">
     <div id="status-eye">
@@ -117,7 +117,7 @@
   </div>
 
   <!--CONFIGURATION-->
-  <h3 style="vertical-align: middle;"><%= image_tag("/images/yast-config.png", :height=>"23", :width=>"23", :border=>"0", :style=>'vertical-align: bottom;') %> <%= _("Configuration") %></h3>
+  <h3 style="vertical-align: middle;"><%= image_tag("/images/yast-config.png", :height=>"23", :width=>"23", :border=>"0", :style=>'vertical-align: middle;') %> <%= _("Configuration") %></h3>
   <div id="favorites" class="plugin-content">
     <div class="overview">
       <% if @shortcuts.empty? %>
