--- a/webclient/public/stylesheets/webyast-controlpanel.css
+++ b/webclient/public/stylesheets/webyast-controlpanel.css
@@ -23,6 +23,7 @@
   font-size:12px;
   border:4px solid #f5f5f5;
   -moz-box-shadow: 0px 15px 0px #eee inset, 0px -15px 0px #eee inset;
+  -webkit-box-shadow:inset 0 15px 0 #eee,  inset 0 -15px 0 #eee;
   margin-bottom:50px;
 }
 
@@ -36,22 +37,27 @@
   overflow:hidden;
 
   -moz-box-shadow: 0px 0px 1px #666, 0px 0px 10px #888;
+  -webkit-box-shadow: 0px 0px 1px #666, 0px 0px 10px #888;
 
   /* SQUARE   */
   -moz-border-radius:10px;
   /*ROUND*/
   -moz-border-radius:100%;
+  -webkit-border-radius:112px;
 
   background: -moz-radial-gradient(center 45deg, circle closest-side, #eee 0%, #474747 100%) transparent;
+  background-image: -webkit-radial-gradient(circle, grey, black);
 
 }
 
 #status-eye.eye_healthy {
   background: -moz-radial-gradient(center 45deg, circle closest-side, #68b400 0%, #474747 100%) transparent;
+  background-image: -webkit-radial-gradient(circle, green, black);
 }
 
 #status-eye.eye_warning {
-  background: -moz-radial-gradient(center 45deg, circle closest-side, red 0%, #474747 99%)
+  background: -moz-radial-gradient(center 45deg, circle closest-side, red 0%, #474747 99%);
+  background-image: -webkit-radial-gradient(circle, red, black);
 }
 
 div.statusbar_header {
@@ -100,6 +106,7 @@ div.statusbar_header label {
   padding:5px;
   min-height:50px;
   -moz-border-radius:5px;
+  -webkit-border-radius:5px;
 }
 
 div.statusbar_row { line-height:26px; vertical-align:middle; }
@@ -115,17 +122,8 @@ div.statusbar_row a.warning_message {
   border-bottom:1px dotted #666;
 }
 
+div.update_all input{ width:100%; }
 
-
-div.update_all input{
-    width:100%;
-}
-div.statusbar_row span.update_button {
-    vertical-align:middle;
-    #border:none;
-    #float:right;
-    clear:left;
-}
 div.statusbar_row img.small-working-icon { vertical-align: middle; }
 div.statusbar_row img { display:inline-block; height:22px; width:22px; margin-right:5px; vertical-align:middle; }
 div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
@@ -133,13 +131,16 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 .status_ok, .status_warning {
   margin-right:5px;
   display:inline-block;
-  border:2px solid #eee;
+  border:2px solid #fff;
   width:20px;
   height:20px;
   padding:0px;
   text-align:center;
   vertical-align:middle;
+
   -moz-border-radius:100%;
+  -webkit-border-radius:20px;
+
   line-height:12px;
   font-size:18px;
   font-weight:bolder;
@@ -150,11 +151,13 @@ div.statusbar_row label { margin-left: 5px; vertical-align: middle; }
 .status_warning {
   background: -moz-linear-gradient(center bottom , #b43434, #ea5656) repeat scroll 0 0 transparent;
   background: -moz-radial-gradient(center center 45deg, circle closest-side, #ea5656 0%, #7b3232 100%) repeat scroll 0 0 transparent;
+  background-image: -webkit-radial-gradient(circle, red, black);
 }
 
 .status_ok {
   background: -moz-linear-gradient(center bottom , #25712e, #59c766) repeat scroll 0 0 transparent;
   background: -moz-radial-gradient(center center 45deg, circle closest-side, #59c766 0%, #25712e 100%) repeat scroll 0 0 transparent;
+  background-image: -webkit-radial-gradient(circle, green, black);
 }
 
 #favorites { border-color: #eee; }
