--- a/webclient/app/sass/style.sass
+++ b/webclient/app/sass/style.sass
@@ -2,18 +2,18 @@
  *#--
  *# Webyast Webservice framework
  *#
- *# Copyright (C) 2009, 2010 Novell, Inc. 
+ *# Copyright (C) 2009, 2010 Novell, Inc.
  *#   This library is free software; you can redistribute it and/or modify
  *# it only under the terms of version 2.1 of the GNU Lesser General Public
- *# License as published by the Free Software Foundation. 
+ *# License as published by the Free Software Foundation.
  *#
  *#   This library is distributed in the hope that it will be useful, but WITHOUT
  *# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
- *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more 
+ *# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
  *# details.
  *#
  *#   You should have received a copy of the GNU Lesser General Public
- *# License along with this library; if not, write to the Free Software 
+ *# License along with this library; if not, write to the Free Software
  *# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
  *#++
 
@@ -200,16 +200,16 @@ ul li
   ul.header-links
     float: right
     vertical-align: bottom
- 
 
-#timeoutMessage 
+
+#timeoutMessage
   display: none
   font-size: 16px
   font-weight: bold
   padding: 14px
   position: absolute
   right: 0
-  left: 0 
+  left: 0
   top: 0
   text-align: center
   z-index: 100000
@@ -217,24 +217,24 @@ ul li
   background-color: #FEEFB3
   border-top: 2px solid #999
   border-bottom: 2px solid #999
-  
-  img 
+
+  img
     left: 0
     margin: 2px 1em 0
     position: absolute
     top: 0px
     float: left
 
-/*#progress-bar 
+/*#progress-bar
   width: 100%
   overflow-x: hidden
   top: 0
   left: 0
   padding: 0px
   display: none
-  
-/*#progress-level 
-  background-color: #abdf3f 
+
+/*#progress-level
+  background-color: #abdf3f
   height: 3px
 
 #content
@@ -290,7 +290,7 @@ ul li
 
 #login-dialogue
   width: 23em
-  /*min-height: 17em; FIXME not working in IE6 | not working anywhere, 
+  /*min-height: 17em; FIXME not working in IE6 | not working anywhere,
   /*breaks host selection screen --bubli
   background: !c_button
   margin: 10px auto
@@ -350,7 +350,7 @@ ul li
 !border_inset_base_color = !c_background
 .plugin-content
   background-color: !c_inverse_text
-  /*background-color: 
+  /*background-color:
   /*+border-inset
   +border-inset-5
   +round-corners
@@ -372,10 +372,11 @@ div.overview
     float: left
     margin: 5px
     border: 2px solid transparent
-    width: 75px
-    height: 8em
-    padding: 1em 5px 0
+    width: 90px
+    height: 90px
+    padding: 10px 5px 0px
     text-align: center
+    word-wrap: break-word
     &:hover
       border-color: !c_button_border
       background: !c_background
@@ -433,13 +434,13 @@ input.error
 /*  color:#990000;
 /*  padding-top:2px;
 /*  padding-left:.5em;
-/*  vertical-align:middle; 
+/*  vertical-align:middle;
 /*}
 /*
-/*label.valid { 
+/*label.valid {
 /*  background: url('/images/checked.gif') no-repeat;
 /*  padding:0px 0px 0px 18px;
-/*  vertical-align:middle; 
+/*  vertical-align:middle;
 /*  margin-left:5px;
 /*}
 
@@ -684,16 +685,16 @@ div#browserWarning
   min-height: 5em
   div, h2
     display: block
-    
-.eula-text-area 
+
+.eula-text-area
   height: 30em
   background-color: white
   overflow: auto
   border: 1px solid #999
   font-size: 1.1em
   font-family: courier, serif
-  
+
 .eula_paragraph
   text-align: left
   padding-top: 5px
-   
+
