--- a/webclient/public/stylesheets/new_inputs.css
+++ b/webclient/public/stylesheets/new_inputs.css
@@ -742,3 +742,7 @@ span.icon-yast-users{ background-position: 0 -1470px; }
 div.plugin-border { -moz-border-radius:0px; border:1px solid  #D7D8DF; margin:30px 0; padding:10px 0px;  overflow:hidden; clear:both; background: -moz-linear-gradient(top, #f5f5f5 0%, #f8f8f8 10%, #fafafa 11%, #fff 100%); }
 #questionMark { margin:0px 5px; float:none; background: none repeat scroll 0 0 #757575; }
 
+
+/*@font faces*/
+body { font: Helvetica, Trebuchet MS, Verdana, Arial, sans-serif; }
+
